photo fix for insight articles on tablet screen sizes.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -788,7 +788,7 @@
     & li::marker{
       xcontent: '✓  ';
       @media (min-width: 90rem){
-      font-size: 2rem;
+        font-size: 2rem;
       }
       color: var(--Brand-Green);
       content: url('/images/done.svg') '  ';
@@ -1109,18 +1109,17 @@
       margin-right: 0.94rem;
       padding: 0.3125rem 0.3125rem 0.0875rem 0.3125rem;
       text-decoration: none;
-     }
-     & .tag:hover{
+      }
+      & .tag:hover{
       cursor: pointer;
       background: linear-gradient(0deg, rgba(38, 84, 125, 0.20) 0%, rgba(38, 84, 125, 0.20) 100%), linear-gradient(0deg, #96CF8C 0%, #96CF8C 100%), #FFF;
-     }
+      }
     }
   }
   & .in-heroimg{
     grid-row: 1 / span 2;
     grid-column: 1 / span 3;
-    min-width-48-90-padding-block: 3rem;
-    
+    min-width-48-90-padding-block: 3rem;    
   }
   }
   article{
@@ -1135,6 +1134,10 @@
   }
   article ul{
     margin-left: 1.5rem;
+    & li{
+      font-size: 0.875rem;
+      line-height: 1.875rem;
+    }
   }
   article .pull-quote{
     display: grid;
@@ -1245,7 +1248,8 @@
       grid-template-columns: repeat(6, auto);
       justify-content: space-between;
       align-items: center;
-      padding: 1.5625rem 0 1.5rem 0;
+      padding: 1.5625rem 1.25rem 1.5rem 1.25rem;
+      background-color: white;
   }
   #getintouch{
     grid-column-start: 5;
@@ -2302,7 +2306,7 @@
         & .reasons {
           margin-inline: auto;
           xpadding-top:1.2rem;
-          margin-top: -2.375rem;
+          margin-top: -1.375rem;
           margin-bottom: 2rem;
   
         & li{
